[project]
name = "framework-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.12.2",
    "ipykernel>=6.29.5",
    "jax>=0.6.0",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "typing>=3.10.0.0",
]
